2011-07-18  TADA Tadashi <t@tdtds.jp>
	* plugin/00default.rb: replaced sub to lines.
	* js/01conf.js: fixed: lost CR/LF in textarea.

2011-07-06  TADA Tadashi <t@tdtds.jp>
	* specified id attr for conf form element.

2011-07-05  TADA Tadashi <t@tdtds.jp>
	* saved preferences in ajax.

2011-06-25  TADA Tadashi <t@tdtds.jp>
	* plugin/image.rb, js/image.js: using jQuery to insert image tags. #54
	* plugin/image.rb: fixed encoding error on ruby 1.9.
	* skel/update.rhtml.zh: removed garbage tags.
	* js/category.js: changed cursor when hover.

2011-06-25  MATSUOKA Kohei <kohei@machu.jp>
	* js/highlight.js: fixed XSS vulnerability. #59

2011-06-21  TADA Tadashi <t@tdtds.jp>
	* added vendor/imagesize.
	* plugin/image.rb: using ImageSize class getting image type and size. #56

2011-06-20  MATSUOKA Kohei <kohei@machu.jp>
	* plugin/highlight.rb, js/highlight.js: rewrited on jQuery. #38, #53

2011-06-20  TADA Tadashi <t@tdtds.jp>
	* plugin/image.rb, js/image.rb: ported to jQuery. #54

2011-06-18  TADA Tadashi <t@tdtds.jp>
	* plugin/00default.rb: added query string to javascripts for disable browser cache.

2011-06-16  TADA Tadashi <t@tdtds.jp>
	* plugin/amazon.rb: preferences for using bit.ly. #47
	* js/00default.js: set $tDiary.blogkit to false in default. #48

2011-06-13  TADA Tadashi <t@tdtds.jp>
	* plugin/js/disp_referrer.rb: maintained some search engines.

2011-06-12  TADA Tadashi <t@tdtds.jp>
	* js/00default.js, js/category.js: fixed: running on MSIE(8) or Firefox(4).

2011-06-11  TADA Tadashi <t@tdtds.jp>
	* plugin/category.rb, js/category.js: dropdown list style on edit support.
	* plugin/00default.rb: sorted javascripts by file name.

2011-06-06  TADA Tadashi <t@tdtds.jp>
	* avoid duplicate loading of javascript files.
	* plugin/category.rb, js/category.js: splitted js file and rewrited on jQuery.

2011-06-06  OGAWA KenIchi <kenichi@ice.email.ne.jp>
	* plugin/pre_wrap.rb: fixed error about invalid selector.

2011-06-02  TADA Tadashi <t@tdtds.jp>