@@ -3,7 +3,6 @@
 require File.expand_path('../tdiary/environment', __FILE__)
 require 'rake'
 require 'rake/clean'
-require 'rake/testtask'
 require 'rspec/core/rake_task'
 
 CLEAN.include(
