@@ -1,40 +1,24 @@
 # -*- coding: utf-8; -*-
 module TDiary
-  class Dispatcher
+	class Dispatcher
 		class IndexMain
-			def self.run( cgi )
-				begin
-					@cgi = cgi
-					conf = TDiary::Config::new(@cgi)
-					tdiary = nil
-					status = nil
+			def self.run( request, cgi )
+				new( request, cgi ).run
+			end
 
-					begin
-						if @cgi.valid?( 'comment' ) then
-							tdiary = TDiary::TDiaryComment::new( @cgi, "day.rhtml", conf )
-						elsif @cgi.valid?( 'date' )
-							date = @cgi.params['date'][0]
-							if /^\d{8}-\d+$/ =~ date then
-								tdiary = TDiary::TDiaryLatest::new( @cgi, "latest.rhtml", conf )
-							elsif /^\d{8}$/ =~ date then
-								tdiary = TDiary::TDiaryDay::new( @cgi, "day.rhtml", conf )
-							elsif /^\d{6}$/ =~ date then
-								tdiary = TDiary::TDiaryMonth::new( @cgi, "month.rhtml", conf )
-							elsif /^\d{4}$/ =~ date then
-								tdiary = TDiary::TDiaryNYear::new( @cgi, "month.rhtml", conf )
-							end
-						elsif @cgi.valid?( 'category' )
-							tdiary = TDiary::TDiaryCategoryView::new( @cgi, "category.rhtml", conf )
-						elsif @cgi.valid?( 'q' )
-							tdiary = TDiary::TDiarySearch::new( @cgi, "search.rhtml", conf )
-						else
-							tdiary = TDiary::TDiaryLatest::new( @cgi, "latest.rhtml", conf )
-						end
-					rescue TDiary::PermissionError
-						raise
-					rescue TDiary::TDiaryError
-					end
-					tdiary = TDiary::TDiaryLatest::new( @cgi, "latest.rhtml", conf ) if not tdiary
+			attr_reader :request, :cgi, :conf, :tdiary, :params
+
+			def initialize( request, cgi )
+				@request = request
+				@cgi = cgi
+				@conf = TDiary::Config::new( cgi, request )
+				@params = request.params
+			end
+
+			def run
+				begin
+					status = nil
+					@tdiary = create_tdiary
 
 					begin
 						head = {
@@ -45,12 +29,12 @@ module TDiary
 						body = ''
 						head['Last-Modified'] = CGI::rfc1123_date( tdiary.last_modified )
 
-						if /HEAD/i =~ @cgi.request_method then
+						if request.head?
 							head['Pragma'] = 'no-cache'
 							head['Cache-Control'] = 'no-cache'
 							return TDiary::Response.new( '', 200, head )
 						else
-							if @cgi.mobile_agent? then
+							if request.mobile_agent?
 								body = conf.to_mobile( tdiary.eval_rhtml( 'i.' ) )
 								head['charset'] = conf.mobile_encoding
 								head['Content-Length'] = body.bytesize.to_s
@@ -58,7 +42,7 @@ module TDiary
 								require 'digest/md5'
 								body = tdiary.eval_rhtml
 								head['ETag'] = %Q["#{Digest::MD5.hexdigest( body )}"]
-								if ENV['HTTP_IF_NONE_MATCH'] == head['ETag'] and /^GET$/i =~ @cgi.request_method then
+								if ENV['HTTP_IF_NONE_MATCH'] == head['ETag'] and request.get? then
 									status = CGI::HTTP_STATUS['NOT_MODIFIED']
 									body = ''
 								else
@@ -70,7 +54,7 @@ module TDiary
 								head['X-Frame-Options'] = conf.x_frame_options if conf.x_frame_options
 							end
 							head['cookie'] = tdiary.cookies if tdiary.cookies.size > 0
-							TDiary::Response.new( body, ::TDiary::Dispatcher.extract_status_for_legacy_tdiary( status ), head )
+							TDiary::Response.new( body, ::TDiary::Dispatcher.extract_status_for_legacy_tdiary( head ), head )
 						end
 					rescue TDiary::NotFound
 						body = %Q[
@@ -83,7 +67,6 @@ module TDiary
 						#'Location' => $!.path
 						'Content-Type' => 'text/html',
 					}
-					head['cookie'] = tdiary.cookies if tdiary && tdiary.cookies.size > 0
 					body = %Q[
 								<html>
 								<head>
@@ -92,12 +75,41 @@ module TDiary
 								</head>
 								<body>Wait or <a href="#{$!.path}">Click here!</a></body>
 								</html>]
+					head['cookie'] = tdiary.cookies if tdiary && tdiary.cookies.size > 0
 					# TODO return code should be 302? (current behaviour returns 200)
 					TDiary::Response.new( body, 200, head )
 				end
 			end
+
+			def create_tdiary
+				begin
+					if params['comment']
+						tdiary = TDiary::TDiaryComment::new( cgi, "day.rhtml", conf )
+					elsif (date = params['date'])
+						if /^\d{8}-\d+$/ =~ date
+							tdiary = TDiary::TDiaryLatest::new( cgi, "latest.rhtml", conf )
+						elsif /^\d{8}$/ =~ date
+							tdiary = TDiary::TDiaryDay::new( cgi, "day.rhtml", conf )
+						elsif /^\d{6}$/ =~ date
+							tdiary = TDiary::TDiaryMonth::new( cgi, "month.rhtml", conf )
+						elsif /^\d{4}$/ =~ date
+							tdiary = TDiary::TDiaryNYear::new( cgi, "month.rhtml", conf )
+						end
+					elsif params['category']
+						tdiary = TDiary::TDiaryCategoryView::new( cgi, "category.rhtml", conf )
+					elsif params['q']
+						tdiary = TDiary::TDiarySearch::new( cgi, "search.rhtml", conf )
+					else
+						tdiary = TDiary::TDiaryLatest::new( cgi, "latest.rhtml", conf )
+					end
+				rescue TDiary::PermissionError
+					raise
+				rescue TDiary::TDiaryError
+				end
+				( tdiary ? tdiary : TDiary::TDiaryLatest::new( cgi, "latest.rhtml", conf ) )
+			end
 		end
-  end
+	end
 end
 
 # Local Variables:
