@@ -1,43 +1,27 @@
 # -*- coding: utf-8; -*-
 module TDiary
-  class Dispatcher
+	class Dispatcher
 		class UpdateMain
-			def self.run( cgi )
-				@cgi = cgi
-				conf = TDiary::Config::new(@cgi)
-				tdiary = nil
-				begin
-					if @cgi.valid?( 'append' )
-						tdiary = TDiary::TDiaryAppend::new( @cgi, 'show.rhtml', conf )
-					elsif @cgi.valid?( 'edit' )
-						tdiary = TDiary::TDiaryEdit::new( @cgi, 'update.rhtml', conf )
-					elsif @cgi.valid?( 'replace' )
-						tdiary = TDiary::TDiaryReplace::new( @cgi, 'show.rhtml', conf )
-					elsif @cgi.valid?( 'appendpreview' ) or @cgi.valid?( 'replacepreview' )
-						tdiary = TDiary::TDiaryPreview::new( @cgi, 'preview.rhtml', conf )
-					elsif @cgi.valid?( 'plugin' )
-						tdiary = TDiary::TDiaryFormPlugin::new( @cgi, 'update.rhtml', conf )
-					elsif @cgi.valid?( 'comment' )
-						tdiary = TDiary::TDiaryShowComment::new( @cgi, 'update.rhtml', conf )
-					elsif @cgi.valid?( 'saveconf' )
-						tdiary = TDiary::TDiarySaveConf::new( @cgi, 'conf.rhtml', conf )
-					elsif @cgi.valid?( 'conf' )
-						tdiary = TDiary::TDiaryConf::new( @cgi, 'conf.rhtml', conf )
-					elsif @cgi.valid?( 'referer' )
-						tdiary = TDiary::TDiaryConf::new( @cgi, 'referer.rhtml', conf )
-					else
-						tdiary = TDiary::TDiaryForm::new( @cgi, 'update.rhtml', conf )
-					end
-				rescue TDiary::TDiaryError
-					tdiary = TDiary::TDiaryForm::new( @cgi, 'update.rhtml', conf )
-				end
+			def self.run( request, cgi )
+				new( request, cgi ).run
+			end
 
+			attr_reader :request, :cgi, :conf, :tdiary, :params
+
+			def initialize( request, cgi )
+				@request = request
+				@cgi = cgi
+				@conf = TDiary::Config::new( cgi, request )
+				@params = request.params
+			end
+
+			def run
+				@tdiary = create_tdiary
 				begin
-					head = body = ''
-					if @cgi.mobile_agent? then
+					head = {}; body = ''
+					if request.mobile_agent?
 						body = conf.to_mobile( tdiary.eval_rhtml( 'i.' ) )
 						head = {
-							'status' => '200 OK',
 							'Content-Type' => 'text/html',
 							'charset' => conf.mobile_encoding,
 							'Content-Length' => body.bytesize.to_s,
@@ -46,21 +30,19 @@ module TDiary
 					else
 						body = tdiary.eval_rhtml
 						head = {
-							'status' => '200 OK',
 							'Content-Type' => 'text/html',
 							'charset' => conf.encoding,
 							'Content-Length' => body.bytesize.to_s,
 							'Vary' => 'User-Agent'
 						}
 					end
-					body = ( /HEAD/i !~ @cgi.request_method ? body : '' )
+					body = ( request.head? ? '' : body )
 					TDiary::Response.new( body, 200, head )
 				rescue TDiary::ForceRedirect
 					head = {
 						#'Location' => $!.path
 						'Content-Type' => 'text/html',
 					}
-					head['cookie'] = tdiary.cookies if tdiary.cookies.size > 0
 					body = %Q[
 								<html>
 								<head>
@@ -69,12 +51,43 @@ module TDiary
 								</head>
 								<body>Wait or <a href="#{$!.path}">Click here!</a></body>
 								</html>]
+					head['cookie'] = tdiary.cookies if tdiary.cookies.size > 0
 					# TODO return code should be 302? (current behaviour returns 200)
 					TDiary::Response.new( body, 200, head )
 				end
 			end
+
+			private
+			def create_tdiary
+				begin
+					if params['append']
+						tdiary = TDiary::TDiaryAppend::new( cgi, 'show.rhtml', conf )
+					elsif params['edit']
+						tdiary = TDiary::TDiaryEdit::new( cgi, 'update.rhtml', conf )
+					elsif params['replace']
+						tdiary = TDiary::TDiaryReplace::new( cgi, 'show.rhtml', conf )
+					elsif params['appendpreview'] or params['replacepreview']
+						tdiary = TDiary::TDiaryPreview::new( cgi, 'preview.rhtml', conf )
+					elsif params['plugin']
+						tdiary = TDiary::TDiaryFormPlugin::new( cgi, 'update.rhtml', conf )
+					elsif params['comment']
+						tdiary = TDiary::TDiaryShowComment::new( cgi, 'update.rhtml', conf )
+					elsif params['saveconf']
+						tdiary = TDiary::TDiarySaveConf::new( cgi, 'conf.rhtml', conf )
+					elsif params['conf']
+						tdiary = TDiary::TDiaryConf::new( cgi, 'conf.rhtml', conf )
+					elsif params['referer']
+						tdiary = TDiary::TDiaryConf::new( cgi, 'referer.rhtml', conf )
+					else
+						tdiary = TDiary::TDiaryForm::new( cgi, 'update.rhtml', conf )
+					end
+				rescue TDiary::TDiaryError
+					tdiary = TDiary::TDiaryForm::new( cgi, 'update.rhtml', conf )
+				end
+				tdiary
+			end
 		end
-  end
+	end
 end
 
 # Local Variables:
