@@ -20,10 +20,11 @@ begin
 		org_path = File::dirname( __FILE__ ).untaint
 	end
 	$:.unshift( org_path ) unless $:.include?( org_path )
-	require 'tdiary/dispatcher'
+	require 'tdiary'
 
 	@cgi = CGI.new
-	status, headers, body = TDiary::Dispatcher.update.dispatch_cgi( @cgi )
+	request = TDiary::Request.new( ENV, @cgi )
+	status, headers, body = TDiary::Dispatcher.update.dispatch_cgi( request, @cgi )
 	headers['type'] = headers.delete('Content-Type')
 	TDiary::Dispatcher.send_headers( status, headers )
 	TDiary::Dispatcher.send_body( body )
